// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the screens in Arabic > a try that did not pass 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="المسألة التالية"
    >
      <header
        class="mt-head mt-head-versioned"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
        <span
          aria-hidden="true"
          class="mt-version"
          dir="ltr"
        >
          v0.2.1
        </span>
      </header>
      <div
        class="mt-body"
      >
        <div
          class="mt-verdict"
        >
          <p
            class="mt-verdict-line"
          >
            <span>
              لم تجتز هذه المحاولة الفحص.
            </span>
          </p>
          <p
            class="mt-verdict-detail"
          >
            ستظهر المسألة التالية أدناه؛ وإن لم تظهر، فاطلب مسألة في الدردشة.
          </p>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`the screens in Arabic > the first sign-in 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="مرحبا بك في MathTrail"
  >
    <header
      class="mt-head mt-head-versioned"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            MathTrail
          </span>
        </div>
      </div>
      <span
        aria-hidden="true"
        class="mt-version"
        dir="ltr"
      >
        v0.2.1
      </span>
    </header>
    <div
      class="mt-body"
    >
      <p
        class="mt-lead"
      >
        يقدم MathTrail للأطفال في الصفوف من 1 إلى 6 مسائل رياضيات بأسلوب الأولمبياد، هنا في الدردشة مباشرة، ويشرح كل خطأ. يتولى إعداده شخص بالغ: أحد الوالدين أو معلم.
      </p>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            اسم مستعار
          </span>
        </div>
        <p>
          لا يستخدم للطفل إلا اسم مستعار: لا اسم حقيقي أبدا، ولا تاريخ ميلاد، ولا مدرسة.
        </p>
      </div>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            ما ستسأل عنه الدردشة
          </span>
        </div>
        <p>
          اسم مستعار والصف، من 1 إلى 6. وإن رغبت، أيضا اهتمامات الطفل، وما لم تتناوله المدرسة بعد، ولغة الدروس.
        </p>
      </div>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            مكان حفظ البيانات
          </span>
        </div>
        <p>
          في ملف واحد على Google Drive الخاص بك، يمكنك فتحه أو تنزيله أو حذفه. لا يحتفظ MathTrail بأي شيء لديه.
        </p>
      </div>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            طريقة البدء
          </span>
        </div>
        <p>
          يكفي طلب ملف شخصي في MathTrail في هذه الدردشة والإجابة عن أسئلتها. ويمكن تغييره لاحقا من «الملف الشخصي والتقدم».
        </p>
      </div>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the form of the profile, refused field by field 1`] = `
<form
  aria-busy="false"
  aria-label="تغيير الملف الشخصي"
  class="mt-form"
>
  <fieldset
    class="mt-form-fields"
  >
    <div
      class="mt-form-field"
    >
      <label
        class="mt-form-label"
        for="P0-4"
      >
        الاسم المستعار
      </label>
      <input
        aria-describedby="P0-4-note P0-4-problem"
        aria-invalid="true"
        class="mt-input"
        id="P0-4"
        type="text"
      />
      <p
        class="mt-field-note"
        id="P0-4-note"
      >
        ليس الاسم الحقيقي للطفل أبدا.
      </p>
      <p
        class="mt-field-problem"
        id="P0-4-problem"
      >
        يرجى ملء هذا الحقل.
      </p>
    </div>
    <div
      class="mt-form-field"
    >
      <label
        class="mt-form-label"
        for="P0-5"
      >
        الصف
      </label>
      <select
        aria-describedby="P0-5-note P0-5-problem"
        aria-invalid="true"
        class="mt-input mt-select"
        id="P0-5"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
        <option
          value="6"
        >
          6
        </option>
      </select>
      <p
        class="mt-field-note"
        id="P0-5-note"
      >
        مجرد تسمية: تغييره لا يؤثر في أي تصنيف.
      </p>
      <p
        class="mt-field-problem"
        id="P0-5-problem"
      >
        يرجى اختيار إحدى القيم المعروضة.
      </p>
    </div>
    <fieldset
      aria-describedby="P0-6-problem"
      class="mt-form-field"
    >
      <legend
        class="mt-form-label"
      >
        الاهتمامات
      </legend>
      <ul
        class="mt-chips"
      >
        <li
          class="mt-chip mt-chip-removable"
        >
          <span
            class="mt-chip-text"
          >
            space
          </span>
          <button
            aria-label="إزالة «space»"
            class="mt-chip-remove"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mt-icon"
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            />
          </button>
        </li>
        <li
          class="mt-chip mt-chip-removable"
        >
          <span
            class="mt-chip-text"
          >
            animals
          </span>
          <button
            aria-label="إزالة «animals»"
            class="mt-chip-remove"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mt-icon"
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            />
          </button>
        </li>
        <li
          class="mt-chip mt-chip-removable"
        >
          <span
            class="mt-chip-text"
          >
            football
          </span>
          <button
            aria-label="إزالة «football»"
            class="mt-chip-remove"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mt-icon"
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            />
          </button>
        </li>
      </ul>
      <div
        class="mt-add"
      >
        <label
          class="mt-vh"
          for="P0-6"
        >
          اهتمام جديد
        </label>
        <input
          class="mt-input"
          id="P0-6"
          type="text"
        />
        <button
          class="mt-btn"
          disabled=""
          type="button"
        >
          إضافة
        </button>
      </div>
      <p
        class="mt-field-problem"
        id="P0-6-problem"
      >
        أحدها فارغ أو طويل جدا.
      </p>
    </fieldset>
    <fieldset
      aria-describedby="P0-7-problem"
      class="mt-form-field"
    >
      <legend
        class="mt-form-label"
      >
        ما لم تتناوله المدرسة بعد
      </legend>
      <div
        class="mt-checks"
      >
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الجمع
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الطرح
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الضرب
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            القسمة
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            القسمة مع الباقي
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الكسور البسيطة
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            ترتيب العمليات
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الأعداد الزوجية والفردية
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الأعداد الأكبر من 20
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الأعداد الأكبر من 100
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الأعداد الأكبر من 1000
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الساعات والدقائق
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            أشهر السنة
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            النقود ورد الباقي
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            تحويل الوحدات
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            العمليات على الكسور
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الكسور العشرية
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            النسب المئوية
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            النسبة والتناسب
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الأعداد السالبة
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            المربعات والقوى
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            المساحة والمحيط
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            الإحداثيات
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            المتوسط الحسابي
          </span>
        </label>
        <label
          class="mt-check"
        >
          <input
            type="checkbox"
          />
          <span>
            قواعد قابلية القسمة
          </span>
        </label>
      </div>
      <p
        class="mt-field-problem"
        id="P0-7-problem"
      >
        إحدى هذه المهارات لا يعرفها MathTrail: يرجى إلغاء تحديدها.
      </p>
    </fieldset>
    <div
      class="mt-form-field"
    >
      <label
        class="mt-form-label"
        for="P0-8"
      >
        لغة الدروس
      </label>
      <select
        aria-describedby="P0-8-problem"
        aria-invalid="true"
        class="mt-input mt-select"
        id="P0-8"
      >
        <option
          value=""
        >
          لغة الدردشة
        </option>
        <option
          value="es"
        >
          الإسبانية
        </option>
        <option
          value="de"
        >
          الألمانية
        </option>
        <option
          value="en"
        >
          الإنجليزية
        </option>
        <option
          value="id"
        >
          الإندونيسية
        </option>
        <option
          value="ur"
        >
          الأوردية
        </option>
        <option
          value="uk"
        >
          الأوكرانية
        </option>
        <option
          value="it"
        >
          الإيطالية
        </option>
        <option
          value="pt"
        >
          البرتغالية
        </option>
        <option
          value="bn"
        >
          البنغالية
        </option>
        <option
          value="pl"
        >
          البولندية
        </option>
        <option
          value="th"
        >
          التايلاندية
        </option>
        <option
          value="tr"
        >
          التركية
        </option>
        <option
          value="ru"
        >
          الروسية
        </option>
        <option
          value="zh-Hans"
        >
          الصينية المبسطة
        </option>
        <option
          value="ar"
        >
          العربية
        </option>
        <option
          value="fa"
        >
          الفارسية
        </option>
        <option
          value="fr"
        >
          الفرنسية
        </option>
        <option
          value="vi"
        >
          الفيتنامية
        </option>
        <option
          value="ko"
        >
          الكورية
        </option>
        <option
          value="hi"
        >
          الهندية
        </option>
        <option
          value="nl"
        >
          الهولندية
        </option>
        <option
          value="ja"
        >
          اليابانية
        </option>
      </select>
      <p
        class="mt-field-problem"
        id="P0-8-problem"
      >
        يرجى اختيار لغة من القائمة.
      </p>
    </div>
  </fieldset>
  <div
    class="mt-form-actions"
  >
    <div
      class="mt-btns"
    >
      <button
        class="mt-btn mt-btn-primary"
        type="button"
      >
        حفظ
      </button>
      <button
        class="mt-btn"
        type="button"
      >
        إلغاء
      </button>
    </div>
    <p
      aria-live="polite"
      class="mt-action-note"
    >
      لم يتم الحفظ: يرجى مراجعة الحقول المشار إليها.
    </p>
  </div>
</form>
`;

exports[`the screens in Arabic > the profile, its cards chosen to be in Arabic 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="الملف الشخصي"
  >
    <header
      class="mt-head"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            Comet
          </span>
        </div>
        <span
          class="mt-badge"
        >
          الصف 3
        </span>
      </div>
    </header>
    <div
      class="mt-progress"
    >
      <section
        class="mt-fields"
      >
        <div
          class="mt-fields-head"
        >
          <h3
            class="mt-section-label"
          >
            الملف الشخصي · لولي الأمر
          </h3>
          <button
            class="mt-btn"
            type="button"
          >
            تعديل
          </button>
        </div>
        <p
          aria-live="polite"
          class="mt-action-note"
        >
          
        </p>
        <dl>
          <div>
            <dt>
              الصف
            </dt>
            <dd>
              3
              <p
                class="mt-field-note"
              >
                مجرد تسمية: تغييره لا يؤثر في أي تصنيف.
              </p>
            </dd>
          </div>
          <div>
            <dt>
              الاهتمامات
            </dt>
            <dd>
              <ul
                class="mt-chips"
              >
                <li
                  class="mt-chip"
                >
                  space
                </li>
                <li
                  class="mt-chip"
                >
                  animals
                </li>
                <li
                  class="mt-chip"
                >
                  football
                </li>
              </ul>
            </dd>
          </div>
          <div>
            <dt>
              ما لم تتناوله المدرسة بعد
            </dt>
            <dd>
              <ul
                class="mt-chips"
              >
                <li
                  class="mt-chip"
                >
                  القسمة مع الباقي
                </li>
              </ul>
            </dd>
          </div>
          <div>
            <dt>
              لغة الدروس
            </dt>
            <dd>
              العربية
            </dd>
          </div>
        </dl>
      </section>
      <section
        class="mt-fields"
      >
        <div
          class="mt-fields-head"
        >
          <h3
            class="mt-section-label"
          >
            بياناتك
          </h3>
        </div>
        <dl>
          <div>
            <dt>
              مكان الملف الشخصي
            </dt>
            <dd>
              الملف الشخصي كله محفوظ في ملف واحد على Google Drive الخاص بك: mathtrail-profile.json، في المجلد MathTrail. يمكنك تنزيله أو نسخه من هناك، ويمكن أن تعطيك الدردشة رابطه.
              <p
                class="mt-field-note"
              >
                ملفات أخرى تحتوي على ملف شخصي: mathtrail-profile (1).json. يقرأ MathTrail أحدثها فقط، ويمكنك حذف الباقي.
              </p>
            </dd>
          </div>
          <div>
            <dt>
              طريقة الحذف
            </dt>
            <dd>
              بحذف الملف وإفراغ سلة المهملات في Drive، لا يبقى أي شيء من الملف الشخصي في أي مكان.
            </dd>
          </div>
          <div>
            <dt>
              طريقة إلغاء الوصول
            </dt>
            <dd>
              في حساب Google، ضمن التطبيقات التابعة لجهات خارجية التي لها حق الوصول، يمكن إزالة MathTrail، وبعدها لن يصل إلى أي شيء.
            </dd>
          </div>
          <div>
            <dt>
              طريقة إزالة التطبيق
            </dt>
            <dd>
              يمكن فصل MathTrail من إعدادات الدردشة نفسها.
            </dd>
          </div>
        </dl>
      </section>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the progress 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="الملف الشخصي والتقدم"
  >
    <header
      class="mt-head"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            Comet
          </span>
        </div>
        <span
          class="mt-badge"
        >
          الصف 3
        </span>
      </div>
    </header>
    <div
      class="mt-progress"
    >
      <section
        aria-label="التصنيف العام"
        class="mt-rank"
      >
        <div
          class="mt-rank-head"
        >
          <span
            class="mt-rank-name"
          >
            معبر النهر
          </span>
          <span
            class="mt-meta"
          >
            المرحلة 3 من 11
          </span>
        </div>
        <div
          class="mt-segments"
          data-tone="ink"
        >
          <span
            class="mt-vh"
          >
            43‎%‎ من الطريق إلى المرحلة التالية
          </span>
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
          <svg
            aria-hidden="true"
            class="mt-segment"
            height="6"
          />
        </div>
        <p
          class="mt-rank-line"
        >
          المرحلة التالية: التل. الإجابات الصحيحة تدفع الشريط إلى الأمام، والأخطاء تعيده قليلًا إلى الوراء.
        </p>
      </section>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            الموضوع التالي
          </span>
        </div>
        <p>
          حصر الحالات، مرة أخرى
        </p>
      </div>
    </div>
    <div
      class="mt-folds"
    >
      <div
        class="mt-fold"
      >
        <h2
          class="mt-fold-head"
        >
          <button
            aria-controls="P0-0"
            aria-expanded="false"
            class="mt-fold-button"
            type="button"
          >
            <span
              class="mt-fold-text"
            >
              <span
                class="mt-fold-title"
              >
                المواضيع
              </span>
            </span>
            <svg
              aria-hidden="true"
              class="mt-icon mt-chevron"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </button>
        </h2>
        <div
          class="mt-fold-body"
          hidden=""
          id="P0-0"
        >
          <section
            class="mt-list"
          >
            <p
              class="mt-list-lead"
            >
              المرحلة في كل موضوع
            </p>
            <ul>
              <li
                class="mt-rank-row"
              >
                <div
                  class="mt-rank-row-top"
                >
                  <span
                    class="mt-rank-row-start"
                  >
                    <span
                      class="mt-row-label"
                    >
                      الترتيب
                    </span>
                    <span
                      class="mt-status mt-status-correct"
                    >
                      <svg
                        aria-hidden="true"
                        class="mt-icon"
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      />
                      تم إتقانه
                    </span>
                  </span>
                  <span
                    class="mt-rank-row-end"
                  >
                    <span
                      class="mt-rank-word"
                    >
                      في المقدّمة
                    </span>
                    <span
                      class="mt-rank-row-name"
                    >
                      التل
                    </span>
                  </span>
                </div>
                <div
                  class="mt-segments"
                  data-tone="2"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                </div>
              </li>
              <li
                class="mt-rank-row"
              >
                <div
                  class="mt-rank-row-top"
                >
                  <span
                    class="mt-rank-row-start"
                  >
                    <span
                      class="mt-row-label"
                    >
                      حصر الحالات
                    </span>
                  </span>
                  <span
                    class="mt-rank-row-end"
                  >
                    <span
                      class="mt-rank-word"
                    >
                      على المستوى نفسه
                    </span>
                    <span
                      class="mt-rank-row-name"
                    >
                      معبر النهر
                    </span>
                  </span>
                </div>
                <div
                  class="mt-segments"
                  data-tone="1"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                </div>
              </li>
              <li
                class="mt-rank-row"
              >
                <div
                  class="mt-rank-row-top"
                >
                  <span
                    class="mt-rank-row-start"
                  >
                    <span
                      class="mt-row-label"
                    >
                      الفواصل والحدود
                    </span>
                  </span>
                  <span
                    class="mt-rank-row-end"
                  >
                    <span
                      class="mt-rank-word"
                    >
                      على المستوى نفسه
                    </span>
                    <span
                      class="mt-rank-row-name"
                    >
                      معبر النهر
                    </span>
                  </span>
                </div>
                <div
                  class="mt-segments"
                  data-tone="1"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                </div>
              </li>
              <li
                class="mt-rank-row"
              >
                <div
                  class="mt-rank-row-top"
                >
                  <span
                    class="mt-rank-row-start"
                  >
                    <span
                      class="mt-row-label"
                    >
                      الزوجية والتناوب
                    </span>
                  </span>
                  <span
                    class="mt-rank-row-end"
                  >
                    <span
                      class="mt-rank-word"
                    >
                      في الخلف
                    </span>
                    <span
                      class="mt-rank-row-name"
                    >
                      درب الغابة
                    </span>
                  </span>
                </div>
                <div
                  class="mt-segments"
                  data-tone="1"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                  <svg
                    aria-hidden="true"
                    class="mt-segment"
                    height="6"
                  />
                </div>
              </li>
              <li
                class="mt-rank-row"
              >
                <div
                  class="mt-rank-row-top"
                >
                  <span
                    class="mt-rank-row-start"
                  >
                    <span
                      class="mt-row-label"
                    >
                      مبدأ برج الحمام
                    </span>
                  </span>
                  <span
                    class="mt-rank-row-end"
                  >
                    <span
                      class="mt-rank-word"
                    >
                      لا إجابات بعد
                    </span>
                  </span>
                </div>
                <div
                  class="mt-segments"
                  data-tone="ink"
                >
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                  <span
                    aria-hidden="true"
                    class="mt-segment mt-segment-open"
                  />
                </div>
              </li>
            </ul>
          </section>
        </div>
      </div>
      <div
        class="mt-fold"
      >
        <h2
          class="mt-fold-head"
        >
          <button
            aria-controls="P0-1"
            aria-expanded="false"
            class="mt-fold-button"
            type="button"
          >
            <span
              class="mt-fold-text"
            >
              <span
                class="mt-fold-title"
              >
                أخطاء متكررة
              </span>
            </span>
            <svg
              aria-hidden="true"
              class="mt-icon mt-chevron"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </button>
        </h2>
        <div
          class="mt-fold-body"
          hidden=""
          id="P0-1"
        >
          <section
            class="mt-list mt-list-framed"
          >
            <ul>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  إغفال حالة أثناء الحصر
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-row-count"
                >
                  <span
                    aria-hidden="true"
                    class="mt-dots"
                  >
                    <span
                      class="mt-dot"
                    />
                    <span
                      class="mt-dot"
                    />
                    <span
                      class="mt-dot"
                    />
                  </span>
                  3 مرات
                </span>
              </li>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  حساب الشيء نفسه مرتين
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-row-count"
                >
                  <span
                    aria-hidden="true"
                    class="mt-dots"
                  >
                    <span
                      class="mt-dot"
                    />
                    <span
                      class="mt-dot"
                    />
                  </span>
                  2 مرتان
                </span>
              </li>
            </ul>
          </section>
        </div>
      </div>
      <div
        class="mt-fold"
      >
        <h2
          class="mt-fold-head"
        >
          <button
            aria-controls="P0-2"
            aria-expanded="false"
            class="mt-fold-button"
            type="button"
          >
            <span
              class="mt-fold-text"
            >
              <span
                class="mt-fold-title"
              >
                آخر الإجابات
              </span>
               
              <span
                class="mt-fold-summary"
              >
                <span
                  class="mt-status-dots"
                >
                  <span
                    aria-hidden="true"
                    class="mt-dots"
                  >
                    <span
                      class="mt-dot"
                      data-tone="wrong"
                    />
                    <span
                      class="mt-dot"
                      data-tone="skipped"
                    />
                    <span
                      class="mt-dot"
                      data-tone="correct"
                    />
                    <span
                      class="mt-dot"
                      data-tone="correct"
                    />
                    <span
                      class="mt-dot"
                      data-tone="wrong"
                    />
                  </span>
                  <span
                    class="mt-vh"
                  >
                    خطأ وتم التخطي وصحيح وصحيح وخطأ
                  </span>
                </span>
              </span>
            </span>
            <svg
              aria-hidden="true"
              class="mt-icon mt-chevron"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </button>
        </h2>
        <div
          class="mt-fold-body"
          hidden=""
          id="P0-2"
        >
          <section
            class="mt-list"
          >
            <ul>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  حصر الحالات
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-status mt-status-wrong"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                  خطأ
                </span>
              </li>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  حصر الحالات
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-status mt-status-skipped"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                  تم التخطي
                </span>
              </li>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  الفواصل والحدود
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-status mt-status-correct"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                  صحيح
                </span>
              </li>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  الترتيب
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-status mt-status-correct"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                  صحيح
                </span>
              </li>
              <li
                class="mt-row"
              >
                <span
                  class="mt-row-label"
                >
                  الزوجية والتناوب
                </span>
                <span
                  class="mt-row-spacer"
                />
                <span
                  class="mt-status mt-status-wrong"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                  خطأ
                </span>
              </li>
            </ul>
            <p
              class="mt-list-note"
            >
              في المجموع، 1 مسألة بلا إجابة.
            </p>
          </section>
        </div>
      </div>
      <div
        class="mt-fold"
      >
        <h2
          class="mt-fold-head"
        >
          <button
            aria-controls="P0-3"
            aria-expanded="false"
            class="mt-fold-button"
            type="button"
          >
            <span
              class="mt-fold-text"
            >
              <span
                class="mt-fold-title"
              >
                الملف الشخصي
              </span>
               
              <span
                class="mt-fold-summary"
              >
                لولي الأمر
              </span>
            </span>
            <svg
              aria-hidden="true"
              class="mt-icon mt-chevron"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </button>
        </h2>
        <div
          class="mt-fold-body"
          hidden=""
          id="P0-3"
        >
          <section
            class="mt-fields"
          >
            <div
              class="mt-fields-head"
            >
              <button
                class="mt-btn"
                type="button"
              >
                تعديل
              </button>
            </div>
            <p
              aria-live="polite"
              class="mt-action-note"
            >
              
            </p>
            <dl>
              <div>
                <dt>
                  الصف
                </dt>
                <dd>
                  3
                  <p
                    class="mt-field-note"
                  >
                    مجرد تسمية: تغييره لا يؤثر في أي تصنيف.
                  </p>
                </dd>
              </div>
              <div>
                <dt>
                  الاهتمامات
                </dt>
                <dd>
                  <ul
                    class="mt-chips"
                  >
                    <li
                      class="mt-chip"
                    >
                      space
                    </li>
                    <li
                      class="mt-chip"
                    >
                      animals
                    </li>
                    <li
                      class="mt-chip"
                    >
                      football
                    </li>
                  </ul>
                </dd>
              </div>
              <div>
                <dt>
                  ما لم تتناوله المدرسة بعد
                </dt>
                <dd>
                  <ul
                    class="mt-chips"
                  >
                    <li
                      class="mt-chip"
                    >
                      القسمة مع الباقي
                    </li>
                  </ul>
                </dd>
              </div>
              <div>
                <dt>
                  لغة الدروس
                </dt>
                <dd>
                  لغة الدردشة
                </dd>
              </div>
            </dl>
          </section>
          <section
            class="mt-fields"
          >
            <div
              class="mt-fields-head"
            >
              <h3
                class="mt-section-label"
              >
                بياناتك
              </h3>
            </div>
            <dl>
              <div>
                <dt>
                  مكان الملف الشخصي
                </dt>
                <dd>
                  الملف الشخصي كله محفوظ في ملف واحد على Google Drive الخاص بك: mathtrail-profile.json، في المجلد MathTrail. يمكنك تنزيله أو نسخه من هناك، ويمكن أن تعطيك الدردشة رابطه.
                </dd>
              </div>
              <div>
                <dt>
                  طريقة الحذف
                </dt>
                <dd>
                  بحذف الملف وإفراغ سلة المهملات في Drive، لا يبقى أي شيء من الملف الشخصي في أي مكان.
                </dd>
              </div>
              <div>
                <dt>
                  طريقة إلغاء الوصول
                </dt>
                <dd>
                  في حساب Google، ضمن التطبيقات التابعة لجهات خارجية التي لها حق الوصول، يمكن إزالة MathTrail، وبعدها لن يصل إلى أي شيء.
                </dd>
              </div>
              <div>
                <dt>
                  طريقة إزالة التطبيق
                </dt>
                <dd>
                  يمكن فصل MathTrail من إعدادات الدردشة نفسها.
                </dd>
              </div>
            </dl>
          </section>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the result of a wrong answer 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="مسألة"
    >
      <header
        class="mt-head mt-head-versioned"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
        <span
          aria-hidden="true"
          class="mt-version"
          dir="ltr"
        >
          v0.2.1
        </span>
      </header>
      <div
        class="mt-body"
      >
        <p
          class="mt-task-text"
          dir="rtl"
          lang="ar"
        >
          طول السياج 12 مترًا. تقف الأعمدة كل 3 أمتار، ومنها عمودان عند الطرفين. كم عدد الأعمدة؟
        </p>
        <pre
          aria-label="الرسم"
          class="mt-diagram"
          dir="ltr"
          role="img"
          tabindex="0"
        >
          |--3--|--3--|--3--|--3--|
        </pre>
        <fieldset
          class="mt-options"
        >
          <legend>
            الإجابات
          </legend>
          <div
            class="mt-options-list"
          >
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                A
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                3
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="wrong"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                B
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                4
              </span>
               
              <span
                class="mt-option-status"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                إجابتك
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="correct"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                C
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                5
              </span>
               
              <span
                class="mt-option-status"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                الإجابة الصحيحة
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                D
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                6
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                E
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                12
              </span>
            </button>
          </div>
        </fieldset>
      </div>
    </article>
    <section
      aria-label="الردود"
      aria-live="polite"
      class="mt-replies"
    >
      <div
        tabindex="-1"
      >
        <article
          class="mt-reply"
        >
          <header
            class="mt-head mt-head-compact"
          >
            <svg
              aria-hidden="true"
              class="mt-icon"
              height="28"
              viewBox="0 0 32 32"
              width="28"
            />
            <div
              class="mt-head-text"
            >
              <span
                class="mt-name"
              >
                MathTrail
              </span>
            </div>
          </header>
          <div
            class="mt-reply-body"
          >
            <p
              class="mt-verdict-line"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              />
              <span>
                ليس تماما: الإجابة هي 5 وليست 4.
              </span>
            </p>
            <div
              class="mt-note mt-note-trap"
            >
              <div
                class="mt-note-label"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                <span>
                  الفخ
                </span>
              </div>
              <p
                dir="rtl"
                lang="ar"
              >
                عُدّت المسافات بدلًا من الأعمدة.
              </p>
            </div>
            <div
              class="mt-steps"
            >
              <h3
                class="mt-section-label"
              >
                الحل
              </h3>
              <ol
                dir="rtl"
                lang="ar"
              >
                <li>
                  <span
                    class="mt-step-num"
                  >
                    1
                  </span>
                   
                  <span>
                    12 ÷ 3 = 4 مسافات.
                  </span>
                </li>
                <li>
                  <span
                    class="mt-step-num"
                  >
                    2
                  </span>
                   
                  <span>
                    في السياج المستقيم الذي تقف أعمدته عند طرفيه يزيد عدد الأعمدة على عدد المسافات بواحد.
                  </span>
                </li>
                <li>
                  <span
                    class="mt-step-num"
                  >
                    3
                  </span>
                   
                  <span>
                    4 + 1 = 5 أعمدة.
                  </span>
                </li>
              </ol>
            </div>
            <div
              class="mt-note mt-note-plain"
            >
              <div
                class="mt-note-label"
              >
                <span>
                  التصنيف في هذا الموضوع
                </span>
              </div>
              <p>
                1502 ← 1480
              </p>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="mt-foot"
    >
      <div
        class="mt-btns"
      >
        <button
          class="mt-btn mt-btn-primary"
          type="button"
        >
          مسألة أخرى
        </button>
      </div>
      <p
        aria-live="polite"
        class="mt-action-note"
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`the screens in Arabic > the task 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="مسألة"
    >
      <header
        class="mt-head mt-head-versioned"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
        <span
          aria-hidden="true"
          class="mt-version"
          dir="ltr"
        >
          v0.2.1
        </span>
      </header>
      <div
        class="mt-body"
      >
        <p
          class="mt-task-text"
          dir="rtl"
          lang="ar"
        >
          طول السياج 12 مترًا. تقف الأعمدة كل 3 أمتار، ومنها عمودان عند الطرفين. كم عدد الأعمدة؟
        </p>
        <pre
          aria-label="الرسم"
          class="mt-diagram"
          dir="ltr"
          role="img"
          tabindex="0"
        >
          |--3--|--3--|--3--|--3--|
        </pre>
        <fieldset
          class="mt-options"
        >
          <legend>
            ما الإجابة الصحيحة؟
          </legend>
          <div
            class="mt-options-list"
          >
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                A
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                3
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                B
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                4
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                C
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                5
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                D
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                6
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                E
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                12
              </span>
            </button>
          </div>
        </fieldset>
      </div>
    </article>
    <section
      aria-label="الردود"
      aria-live="polite"
      class="mt-replies"
    />
    <div
      class="mt-foot"
    >
      <div
        class="mt-btns"
      >
        <button
          class="mt-btn"
          type="button"
        >
          لا أعرف
        </button>
        <button
          aria-expanded="false"
          class="mt-btn"
          type="button"
        >
          تلميح
        </button>
        <button
          class="mt-btn"
          type="button"
        >
          مسألة أخرى
        </button>
      </div>
      <p
        aria-live="polite"
        class="mt-action-note"
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`the screens in Arabic > the wait for a task asked for 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="المسألة التالية"
  >
    <header
      class="mt-head mt-head-versioned"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            MathTrail
          </span>
        </div>
      </div>
      <span
        aria-hidden="true"
        class="mt-version"
        dir="ltr"
      >
        v0.2.1
      </span>
    </header>
    <div
      class="mt-body"
    >
      <div
        class="mt-wait"
      >
        <div
          class="mt-gen"
        >
          <p
            class="mt-gen-title"
          >
            جار إعداد المسألة التالية…
          </p>
          <ol
            aria-live="polite"
          >
            <li
              data-status="active"
            >
              <span
                class="mt-gen-icon"
              >
                <span
                  class="mt-gen-turning"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon mt-spin"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
              </span>
              <span
                class="mt-gen-label"
              >
                <span
                  class="mt-vh"
                >
                  قيد التنفيذ:
                   
                </span>
                تم اختيار الموضوع ومستوى الصعوبة
              </span>
            </li>
            <li
              data-status="waiting"
            >
              <span
                class="mt-gen-icon"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                />
              </span>
              <span
                class="mt-gen-label"
              >
                <span
                  class="mt-vh"
                >
                  في الانتظار:
                   
                </span>
                كتابة المسألة
              </span>
            </li>
            <li
              data-status="waiting"
            >
              <span
                class="mt-gen-icon"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                />
              </span>
              <span
                class="mt-gen-label"
              >
                <span
                  class="mt-vh"
                >
                  في الانتظار:
                   
                </span>
                التحقق من كل إجابة
              </span>
            </li>
            <li
              data-status="waiting"
            >
              <span
                class="mt-gen-icon"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                />
              </span>
              <span
                class="mt-gen-label"
              >
                <span
                  class="mt-vh"
                >
                  في الانتظار:
                   
                </span>
                المسألة جاهزة
              </span>
            </li>
          </ol>
        </div>
        <div
          aria-live="polite"
          class="mt-news"
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the wait for a task being written, a try turned down 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="المسألة التالية"
    >
      <header
        class="mt-head mt-head-versioned"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
        <span
          aria-hidden="true"
          class="mt-version"
          dir="ltr"
        >
          v0.2.1
        </span>
      </header>
      <div
        class="mt-body"
      >
        <div
          class="mt-wait"
        >
          <div
            class="mt-gen"
          >
            <p
              class="mt-gen-title"
            >
              جار إعداد المسألة التالية…
            </p>
            <ol
              aria-live="polite"
            >
              <li
                data-status="done"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    اكتمل:
                     
                  </span>
                  تم اختيار الموضوع ومستوى الصعوبة
                </span>
              </li>
              <li
                data-status="active"
              >
                <span
                  class="mt-gen-icon"
                >
                  <span
                    class="mt-gen-turning"
                  >
                    <svg
                      aria-hidden="true"
                      class="mt-icon mt-spin"
                      fill="none"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    />
                  </span>
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    قيد التنفيذ:
                     
                  </span>
                  كتابة المسألة
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  التحقق من كل إجابة
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  المسألة جاهزة
                </span>
              </li>
            </ol>
          </div>
          <div
            aria-live="polite"
            class="mt-news"
          >
            <p
              class="mt-verdict-line"
            >
              <span>
                لم تجتز إحدى المحاولات الفحص، ويجري الآن إعداد محاولة جديدة.
              </span>
            </p>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;
